--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -11,6 +11,8 @@
   <a href="../index.html">Home</a>
 
   <h1>Dosa</h1>
+
+  <img src="../images/dosa.jpg" alt="Dosa served in a banana leaf along with coconut chutney" width="600">
 </body>
 
 </html>
