Add Dosa recipe

--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -13,6 +13,35 @@
   <h1>Dosa</h1>
 
   <img src="../images/dosa.jpg" alt="Dosa served in a banana leaf along with coconut chutney" width="600">
+
+  <h2>Description</h2>
+  <p>
+    Dosa is a thin, crispy, and savory South Indian pancake made from a fermented batter
+    of rice and urad dal. It's commonly served with coconut chutney and sambar, and is a staple breakfast item
+    throughout India.
+  </p>
+
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 cup rice (preferably parboiled rice or idli rice)</li>
+    <li>1/3 cup urad dal (split black gram)</li>
+    <li>1/2 tsp fenugreek seeds (optional, for better fermentation)</li>
+    <li>Salt to taste</li>
+    <li>Water (as needed)</li>
+    <li>Oil or ghee for cooking</li>
+  </ul>
+
+  <h2>Steps</h2>
+  <ol>
+    <li>Soak the rice, urad dal, and fenugreek seeds separately in water for 4-6 hours.</li>
+    <li>Grind them into a smooth batter using a little water, then mix together.</li>
+    <li>Ferment the batter overnight or for 8–12 hours in a warm place until it rises and turns slightly bubbly.</li>
+    <li>Add salt and mix the fermented batter gently.</li>
+    <li>Heat a pan, lightly grease it, and pour a ladleful of batter.</li>
+    <li>Spread the batter in a circular motion to make a thin dosa.</li>
+    <li>Drizzle oil/ghee around the edges and cook until golden and crisp.</li>
+    <li>Fold and serve hot with chutney or sambar.</li>
+  </ol>
 </body>
 
 </html>
