--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
   <h1>Odin Recipes</h1>
 
-  <a href="./recipes/dosa.html">Dosa</a>
+  <ul>
+    <li><a href="./recipes/dosa.html">Dosa</a></li>
+    <li><a href="./recipes/idli.html">Idli</a></li>
+    <li><a href="./recipes/chilli_paneer.html">Chilli Paneer</a></li>
+  </ul>
 </body>
 
 </html>
