Add height attribute to all images
This will prevent the images from flashing when the page loads.

--- a/recipes/chilli_paneer.html
+++ b/recipes/chilli_paneer.html
@@ -12,7 +12,7 @@
 
   <h1>Chilli Paneer</h1>
 
-  <img src="../images/chilli_paneer.jpg" alt="Chilli paneer served in a steel bowl" width="500">
+  <img src="../images/chilli_paneer.jpg" alt="Chilli paneer served in a steel bowl" height="500">
 
   <h2>Description</h2>
   <p>
