--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -12,7 +12,7 @@
 
   <h1>Dosa</h1>
 
-  <img src="../images/dosa.jpg" alt="Dosa served in a banana leaf along with coconut chutney" width="600">
+  <img src="../images/dosa.jpg" alt="Dosa served in a banana leaf along with coconut chutney" height="500">
 
   <h2>Description</h2>
   <p>
